Deployment/nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs-app
  ports:
  - protocol: TCP
    port: 3031
    targetPort: 3000
  type: ClusterIP
