Deployment/python-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 3032
    targetPort: 8000
  type: ClusterIP
