Deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pythonservice
            port: 
              number: 3032
      - pathType: Prefix
        path: "/getdata"
        backend:
          service:
            name: nodejsservice
            port: 
              number: 3031
